--- a/London_housing_Final.ipynb
+++ b/London_housing_Final.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "Any Data Science project kicks off by importing  ***pandas***. The documentation of this wonderful library can be found [here](https://pandas.pydata.org/). As you've seen, pandas is conveniently connected to the [Numpy](http://www.numpy.org/) and [Matplotlib](https://matplotlib.org/) libraries. \n",
     "\n",
-    "***Hint:*** This part of the data science pipeline will test those skills you acquired in the pandas Foundations course, Module One. "
+    "***Hint:*** This part of the data science pipeline will test those skills you acquired in the pandas. "
    ]
   },
   {
